modules/gdscript/tests/scripts/analyzer/errors/utility_function_wrong_arg.gd
func test():
	print(floor(Color())) # Built-in utility function.
